--- a/arch/arm/configs/noob_defconfig
+++ b/arch/arm/configs/noob_defconfig
@@ -612,6 +612,7 @@ CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BIOSHOCK is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
@@ -3815,10 +3816,13 @@ CONFIG_QMI_ENCDEC=y
 #
 CONFIG_ADRENO_IDLER=y
 # CONFIG_ATAGS_PROC is not set
+CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
+CONFIG_INTELLI_PLUG=y
 CONFIG_INTELLI_THERMAL=y
 CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
 CONFIG_MAKO_HOTPLUG=y
+CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
 CONFIG_POWERSUSPEND=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 CONFIG_SIMPLE_GPU_ALGORITHM=y
