--- a/arch/arm/configs/noob_defconfig
+++ b/arch/arm/configs/noob_defconfig
@@ -556,7 +556,6 @@ CONFIG_MIGRATION=y
 # CONFIG_PHYS_ADDR_T_64BIT is not set
 CONFIG_ZONE_DMA_FLAG=0
 CONFIG_BOUNCE=y
-# CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
 CONFIG_CROSS_MEMORY_ATTACH=y
 # CONFIG_CLEANCACHE is not set
@@ -3821,6 +3820,7 @@ CONFIG_INTELLI_PLUG=y
 CONFIG_INTELLI_THERMAL=y
 CONFIG_KEXEC=y
 CONFIG_KEXEC_HARDBOOT=y
+CONFIG_KSM=y
 CONFIG_ANDROID_LMK_ADJ_RBTREE=y
 CONFIG_MAKO_HOTPLUG=y
 CONFIG_MSM_CPU_VOLTAGE_CONTROL=y
