noob_defconfig: add barry_allen cpu freq gov

--- a/arch/arm/configs/noob_defconfig
+++ b/arch/arm/configs/noob_defconfig
@@ -607,6 +607,7 @@ CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 # CONFIG_CPU_FREQ_STAT_DETAILS is not set
 CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_BARRY_ALLEN is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
@@ -3817,6 +3818,7 @@ CONFIG_QMI_ENCDEC=y
 #
 CONFIG_ADRENO_IDLER=y
 # CONFIG_ATAGS_PROC is not set
+CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
 CONFIG_CPU_FREQ_GOV_BIOSHOCK=y
 CONFIG_INTELLI_PLUG=y
 CONFIG_INTELLI_THERMAL=y
